---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2024-11-09
  Bugfixes:
    - Fixed crash on statrup because of change mod name
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2024-11-09
  Bugfixes:
    - Fixed crash on startup with factorio version 2.0
---------------------------------------------------------------------------------------------------
Version: 0.0.83
Date: 2022-09-27
  Bugfixes:
    - Fix errors on hidden-item and nil signals, which seem to happen in Space Exploration mod.

---------------------------------------------------------------------------------------------------
Version: 0.0.82
Date: 2022-06-25
  Bugfixes:
    - Fix main GUI code textbox having two scrollbars.

---------------------------------------------------------------------------------------------------
Version: 0.0.81
Date: 2022-06-22
  Features:
    - Add remote.call('mlc', 'run', <uid>[, <count>]) interface for benchmarking with /measured-command.

---------------------------------------------------------------------------------------------------
Version: 0.0.80
Date: 2022-06-20
  Features:
    - Pausing variables-window now makes it editable, to allow easy Ctrl-A/Ctrl-C from there.

---------------------------------------------------------------------------------------------------
Version: 0.0.78
Date: 2022-03-11
  Features:
    - Skip printing vars prefixed by "__" in variables window, to intentionally unclutter it that way.

---------------------------------------------------------------------------------------------------
Version: 0.0.77
Date: 2022-03-10
  Features:
    - Add dedicated Pause/Unpause button to variables-window.
