@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
-Date: ????
-  Changes:
+Date: 2024-11-09
+  Features:
+    - Added support for item quality.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2024-11-09
